<resources>
    <string name="app_name">여기다</string>

    <!-- Unit -->
    <string name="unit_int">%d</string>

    <!-- Login Activity -->
    <string name="login_title_h1">여기다</string>
    <string name="login_title_h2_1">여</string>
    <string name="login_title_h2_2">행의</string>
    <string name="login_title_h2_3">기</string>
    <string name="login_title_h2_4">록을</string>
    <string name="login_title_h2_5">남기</string>
    <string name="login_title_h2_6">다</string>
    <string name="login_description">여행의 기록을 남겨보아요</string>
    <string name="login_kakao">카카오로 로그인</string>
    <string name="login_naver">네이버로 로그인</string>
    <string name="login_google">구글로 로그인</string>
    <string name="login_notice1">로그인 시</string>
    <string name="login_notice2">이용약관</string>
    <string name="login_notice3">과</string>
    <string name="login_notice4">개인정보 처리 방침</string>
    <string name="login_notice5">에 동의하게 됩니다.</string>

    <!-- Join Activity -->
    <string name="join_title">회원가입</string>
    <string name="join_profile_image">프로필 사진</string>
    <string name="join_profile_image_optional">(선택)</string>
    <string name="join_nickname">닉네임</string>
    <string name="join_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="join_nick_error">이미 사용중인 닉네임입니다.</string>
    <string name="join_submit">완료</string>
    <string name="join_nick_description">(최대 8글자, 특수문자를 사용할 수 없습니다)</string>

    <!-- bottom navigation -->
    <string name="navi_home">홈</string>
    <string name="navi_around">둘러보기</string>
    <string name="navi_like">여기좋아</string>
    <string name="navi_follow">팔로우</string>

    <!-- Follow Fragment -->
    <string name="follow_search_hint">유저 닉네임으로 검색해보세요</string>
    <string name="follow_item_delete">삭제</string>

    <!-- Home Fragment -->
    <string name="home_title">여기다</string>
    <string name="home_best_traveler_title">Best Traveler</string>
    <string name="home_best_monthly_trip_title">월간 Best 여행지</string>
    <string name="home_recent_trip_title_follow">팔로잉의 최근 여행지</string>
    <string name="home_recent_trip_title">방금 작성된 여행지</string>
    <string name="home_more_text">더보기</string>

    <!-- Around Place Fragment -->
    <string name="around_place_recent">최신순</string>
    <string name="around_place_star">별점순</string>
    <string name="around_place_comment">댓글순</string>
    <string name="around_place_food">식당</string>
    <string name="around_place_cafe">카페</string>
    <string name="around_place_alcohol">술집</string>
    <string name="around_place_tourist">관광지</string>
    <string name="around_place_shopping">쇼핑</string>
    <string name="around_place_hotel">숙소</string>
    <string name="around_place_etc">기타</string>
    <string name="around_place_report">여행지 신고</string>
    <string name="around_place_top">맨 위로</string>
    <string name="around_place_empty">아직 기록이 없어요 \n + 버튼을 눌러 기록을 추가해주세요.</string>
    <string name="around_place_description">장소 둘러보기</string>
    <string name="around_place_map_title">장소 지도로 보기</string>

    <!-- Mypage Fragment -->
    <string name="mypage">마이페이지</string>
    <string name="mypage_follow">팔로워</string>
    <string name="mypage_trip">여행지</string>
    <string name="mypage_following">팔로잉</string>
    <string name="mypage_like">좋아요</string>
    <string name="mypage_mytrip">내가 작성한 여행지</string>
    <string name="mypage_mycomment">내가 댓글 단 장소</string>
    <string name="mypage_alarm">알림</string>
    <string name="mypage_account">내 정보 변경</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_center">고객센터</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_withdraw">회원탈퇴</string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_alarm_setting">알림 설정</string>
    <string name="my_comment_empty">아직 댓글을 남긴 장소가 없어요.\n 장소에 댓글을 남기면 여기서 확인할 수 있어요.</string>
    <string name="change_profile_title">프로필 변경</string>
    <string name="my_trip_empty">아직 작성한 여행지가 없어요.\n여행지를 추가해보세요.</string>

    <!-- Setting Fragment -->
    <string name="notification_setting_all">모든 알림</string>
    <string name="notification_setting_like">좋아요 알림</string>
    <string name="notification_setting_follow">팔로우 알림</string>
    <string name="notification_setting_comment">댓글 알림</string>
    <string name="notification_setting_title">알림이 오지 않는 경우\n설정에서 기기의 알림 설정을 변경해주세요.</string>
    <string name="setting_terms">이용약관</string>
    <string name="setting_opensource">오픈소스 라이센스</string>
    <string name="setting_personal">개인정보 처리방침</string>

    <!-- Alarm Fragment -->
    <string name="alarm_empty">아직 알림이 없어요</string>

    <string name="comment_place_title">댓글 단 장소</string>

    <!-- Add Trip Fragment -->
    <string name="add_trip_title">여행지 추가</string>
    <string name="add_trip_region">지역명</string>
    <string name="add_trip_region_star">*</string>
    <string name="add_trp_region_hint">지역을 선택하세요</string>
    <string name="add_trip_name">여행지 이름</string>
    <string name="add_trip_name_hint">여행지명을 입력하세요</string>
    <string name="add_trip_subtitle">소제목</string>
    <string name="add_trip_subtitle_hint">여행에 대한 소제목을 입력하세요.</string>
    <string name="add_trip_photo_title">대표사진</string>
    <string name="add_trip_confirm">완료</string>

    <!-- Bottom Sheet -->
    <string name="bottom_sheet_region">지역</string>
    <string name="bottom_sheet_sort_title">정렬 기준</string>

    <!-- Alarm Fragment -->
    <string name="alarm_title">알림</string>

    <!-- Around Fragment -->
    <string name="around_search_hint">둘러보고 싶은 지역이나 장소를 입력해보세요</string>

    <!-- Like Fragment -->
    <string name="like_search_hint">여행지 이름으로 검색해보세요.</string>
    <string name="like_trip_sort">정렬</string>
    <string name="like_trip_empty">아직 좋아요한 여행지가 없어요.\n여행지에 좋아요를 눌러보세요.</string>


    <!-- Place Detail Fragment -->
    <string name="place_detail_comment_hint">댓글을 입력하세요</string>

    <!-- Comment -->
    <string name="comment_report">신고</string>
    <string name="comment_delete">삭제</string>

    <!-- Add Place -->
    <string name="add_place_toolbar_title">장소 추가</string>
    <string name="add_place_name_title">장소 이름</string>
    <string name="add_place_search_name_hint">장소 이름을 검색해주세요</string>
    <string name="add_place_tag_title">장소 태그</string>
    <string name="add_place_rating_title">장소를 평가해주세요</string>
    <string name="add_place_review_title">장소 리뷰</string>
    <string name="add_place_review_hint">리뷰를 작성해주세요.</string>
    <string name="add_place_photo_title">장소 사진 추가</string>
    <string name="add_place_photo_description">(최대 10장)</string>

    <!-- User Profile -->
    <string name="user_profile_title">프로필</string>
    <string name="user_profile_follower_title">팔로워</string>
    <string name="user_profile_following_title">팔로잉</string>
    <string name="user_profile_trip_count_title">여행</string>
    <string name="user_profile_trip_empty">유저가 작성한 여행지가 없어요.</string>

    <!-- Trip Like User Fragment -->
    <string name="item_trip_like_user_title">좋아요</string>

    <!-- Edit Place Fragment -->
    <string name="edit_place_title">장소 수정</string>

    <!-- Search User Activity -->
    <string name="search_user_title">유저 검색</string>
    <string name="trIp_search_recent_title">최근 검색어</string>
    <string name="trip_search_recent_remove">전체삭제</string>
    <string name="trip_search_popular_title">인기 검색어</string>
    <string name="trip_search_refresh_description">매일매일 초기화 돼요!</string>
    <string name="trip_search_result_empty">검색 결과가 없습니다.</string>

    <!-- Help dialog -->
    <string name="dialog_help_title">여행지에서는 여행했던 지역을 추가하세요!\n추가한 여행지 안에 좋았던 장소들을 기록해보세요:)</string>
    <string name="dialog_help_subtitle">예시) 여행지: 부산/ 장소: 해운대, 광안리</string>
</resources>