<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".ui.user.LoginActivity">

    <TextView
        android:id="@+id/txt_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/nanum_sonpyeonji"
        android:text="@string/login_title_h1"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_h1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanum_sonpyeonji"
            android:text="@string/login_title_h2_1"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/login_title_h2_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanum_sonpyeonji"
            android:text="@string/login_title_h2_3"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/login_title_h2_4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/login_title_h2_5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanum_sonpyeonji"
            android:text="@string/login_title_h2_6"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:fontFamily="@font/noto_sans_regular"
        android:text="@string/login_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_kakao"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_kakao_yellow_radius_12"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_description"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/iv_kakao"
            android:src="@drawable/img_kakao"
            app:layout_constraintStart_toStartOf="@id/layout_login_kakao"
            app:layout_constraintTop_toTopOf="@id/layout_login_kakao"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_kakao"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/tv_kakao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_login_kakao"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_kakao"
            android:text="@string/login_kakao"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_naver"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_naver_green_radius_12"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_kakao"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/iv_naver"
            android:src="@drawable/img_naver"
            app:layout_constraintStart_toStartOf="@id/layout_login_naver"
            app:layout_constraintTop_toTopOf="@id/layout_login_naver"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_naver"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/tv_naver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_login_naver"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_naver"
            android:text="@string/login_naver"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_margin="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_google"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_white_radius_12"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_naver"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/iv_google"
            android:src="@drawable/img_google"
            app:layout_constraintStart_toStartOf="@id/layout_login_google"
            app:layout_constraintTop_toTopOf="@id/layout_login_google"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_google"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_login_google"
            app:layout_constraintBottom_toBottomOf="@id/layout_login_google"
            android:text="@string/login_google"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>